# db-agent-mcp

./: LICENSE  README.md  db_tool.py  example_run.sh  pyproject.toml  run.sh  spinner.py  sqllite.py
db_tool_pkg/: __init__.py  agent.py  config.py  introspection.py  mcp_app.py  prompt.py  schema.py
